--- a/Project.toml
+++ b/Project.toml
@@ -14,9 +14,12 @@ GeoFormatTypes = "68eda718-8dee-11e9-39e7-89f7f65f511f"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 GeometryOps = "3251bfac-6a57-4b6d-aa61-ac1fef2975ab"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LibGEOS = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Oxygen = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
+ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
