--- a/Project.toml
+++ b/Project.toml
@@ -12,9 +12,12 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiskArrays = "3c3547ce-8d99-4f5e-a174-61eb10b00ae3"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
 GeoFormatTypes = "68eda718-8dee-11e9-39e7-89f7f65f511f"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
+GeoMakie = "db073c08-6b98-4ee5-b6a4-5efafb3259c6"
 GeoParquet = "e99870d8-ce00-4fdd-aeee-e09192881159"
 GeometryOps = "3251bfac-6a57-4b6d-aa61-ac1fef2975ab"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
@@ -27,6 +30,7 @@ Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Oxygen = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Proj = "c94c279d-25a6-4763-9509-64d165bea63e"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
