--- a/Project.toml
+++ b/Project.toml
@@ -6,12 +6,12 @@ version = "0.1.0"
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiskArrays = "3c3547ce-8d99-4f5e-a174-61eb10b00ae3"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
-FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
 GeoFormatTypes = "68eda718-8dee-11e9-39e7-89f7f65f511f"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
@@ -19,6 +19,8 @@ GeoParquet = "e99870d8-ce00-4fdd-aeee-e09192881159"
 GeometryOps = "3251bfac-6a57-4b6d-aa61-ac1fef2975ab"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LibGEOS = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
