--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ Oxygen = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
 Proj = "c94c279d-25a6-4763-9509-64d165bea63e"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
