--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,11 @@
 name = "ReefGuideAPI"
 uuid = "45c573e6-5605-41d1-a10b-0e5ac5982b4e"
-authors = ["Takuya Iwanaga", "Benjamin Grier"]
+authors = ["Takuya Iwanaga", "Benjamin Grier", "Arlo White", "Peter Baker"]
 version = "0.1.0"
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
