--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -38,8 +38,8 @@ jobs:
           version: '1.10'
       - name: Pull Julia cache
         uses: julia-actions/cache@v2
-      - name: Install documentation dependencies
-        run: julia --project=docs -e 'using Pkg; pkg"dev ."; Pkg.instantiate(); Pkg.precompile(); Pkg.status()'
+    #   - name: Install documentation dependencies
+    #     run: julia --project=docs -e 'using Pkg; pkg"dev ."; Pkg.instantiate(); Pkg.precompile(); Pkg.status()'
       #- name: Creating new mds from src
       - name: Build and deploy docs
         uses: julia-actions/julia-docdeploy@v1
