--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -7,6 +7,8 @@ on:
       - main
     tags: ['*']
   pull_request:
+    paths:
+      - 'docs/Manifest.toml'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
