--- a/Manifest-v1.11.toml
+++ b/Manifest-v1.11.toml
@@ -2,7 +2,7 @@
 
 julia_version = "1.11.1"
 manifest_format = "2.0"
-project_hash = "75208bf64bf26cdfa514978aa95618d20914b304"
+project_hash = "ec28c03ea5b6508584814371878b3d5173103b6b"
 
 [[deps.AbstractFFTs]]
 deps = ["LinearAlgebra"]
@@ -1629,7 +1629,9 @@ version = "1.6.3"
 
 [[deps.Oxygen]]
 deps = ["DataStructures", "Dates", "HTTP", "JSON3", "MIMEs", "Reexport", "RelocatableFolders", "Requires", "Sockets", "Statistics", "StructTypes"]
-git-tree-sha1 = "25c503fbd982fe89fba4792aea711ed9e5f9c973"
+git-tree-sha1 = "4eab0b6d8b5050a6d9ff71bdeccb616afa320f48"
+repo-rev = "prioritized-request"
+repo-url = "https://github.com/arlowhite/Oxygen.jl"
 uuid = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
 version = "1.5.14"
 
