--- a/.github/workflows/MKL_jll.yml
+++ b/.github/workflows/MKL_jll.yml
@@ -12,6 +12,7 @@ on:
       is_up_to_date:
         description: "Whether MKL_jll.dep is up to date"
         value: ${{ jobs.check-mkl-dep.outputs.is_up_to_date }}
+  # trigger on pull request whenever Manifest or MKL dep changes
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
