--- a/.github/workflows/CheckMklDep.yml
+++ b/.github/workflows/CheckMklDep.yml
@@ -12,7 +12,7 @@ on:
       is_up_to_date:
         description: "Whether MKL_jll.dep is up to date"
         value: ${{ jobs.check-mkl-dep.outputs.is_up_to_date }}
-  # trigger on pull request whenever Manifest or MKL dep changes
+  # trigger on pull request
   pull_request:
     types: [opened, synchronize, reopened]
 
