--- a/.github/workflows/CheckMklDep.yml
+++ b/.github/workflows/CheckMklDep.yml
@@ -52,9 +52,11 @@ jobs:
         id: check
         run: |
           if [ "${{ env.EXISTING_HASH }}" != "${{ env.CURRENT_HASH }}" ]; then
+            echo "Update required..."
             echo "UPDATE_NEEDED=true" >> $GITHUB_OUTPUT
             echo "is_up_to_date=false" >> $GITHUB_OUTPUT
           else
+            echo "Update not required..."
             echo "UPDATE_NEEDED=false" >> $GITHUB_OUTPUT
             echo "is_up_to_date=true" >> $GITHUB_OUTPUT
           fi
