--- a/.github/workflows/PublishDockerImage.yml
+++ b/.github/workflows/PublishDockerImage.yml
@@ -12,16 +12,16 @@ name: Build and Publish ReefGuideAPI.jl Docker Image
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - pascal
   release:
     types: [published]
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}/reefguide-src
-  JULIA_VERSION: 1.10.5
+  JULIA_VERSION: 1.11
   # Set to true to use a fixed ReefGuideAPI version for debugging, false to use the release version
   USE_FIXED_REEFGUIDEAPI_VERSION: true
   # TODO this doesn't make sense until the releasing is sorted out
