Fix BASE_IMAGE Issue and Optimise Docker Build Time to 8.3m with Precompilation (#47)
* Fix BASE_IMAGE not working  #35

* Fix: Remove MKL_jll-related warnings and reduce Docker build time

- Added explicit installation and precompilation of MKL_jll in the Dockerfile to resolve warnings about missing precompiled modules during container startup.
- Precompiled MKL_jll and IntelOpenMP artifacts during the build phase, significantly reducing precompilation time from 18 minutes to 9 minutes by avoiding on-the-fly precompilation.
- The time reduction is attributed to precompiling MKL_jll in advance, preventing the heavy processing load that would otherwise occur during runtime.

- Added gdal-bin, libgdal-dev, and libfftw3-dev to the Dockerfile to support system dependencies required for geospatial and scientific computations.

* Simplify Dockerfile by consolidating Project.toml and Manifest.toml copy commands

* Added step to pre-download MKL_jll using version from Manifest.toml and cache it before main package precompilation.

* Add explicit MKL_jll dependency

Seeing if this resolves horrendous build times

* Trying out approach to derive dep separately so we can not invalidate cache for base MKL dep

Signed-off-by: Peter Baker <peter.baker122@csiro.au>
Co-authored-by: Pascal Omondiagbe <p.omondiagbe@aims.gov.au>
Co-authored-by: Takuya Iwanaga <takuyai@gmail.com>
Co-authored-by: Peter Baker <peter.baker122@csiro.au>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/PublishDockerImage.yml
+++ b/.github/workflows/PublishDockerImage.yml
@@ -2,6 +2,7 @@
 # It is triggered when a push is made to the main branch.
 
 # Additional notes:
+# - Checks that MKL_jll dependency has been output before running
 # - The workflow uses the github.repository context to name the image, ensuring it's tied to your repository
 # - The GITHUB_TOKEN is automatically provided by GitHub Actions, no need to set it up manually
 # - The Docker metadata action automatically generates appropriate tags based on the release version
@@ -11,16 +12,13 @@ name: Build and Publish ReefGuideAPI.jl Docker Image
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
   release:
     types: [published]
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}/reefguide-src
-  JULIA_VERSION: 1.10.5
+  JULIA_VERSION: 1.11
   # Set to true to use a fixed ReefGuideAPI version for debugging, false to use the release version
   USE_FIXED_REEFGUIDEAPI_VERSION: true
   # TODO this doesn't make sense until the releasing is sorted out
