--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSONWebTokens = "9b8beb19-0777-58c6-920b-28f749fee4d3"
 LibGEOS = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MKL_jll = "856f044c-d86e-5d09-b602-aeab76dc8ba7"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
@@ -48,3 +49,4 @@ YAXArrays = "c21b50f5-aa40-41ea-b809-c0f5e47bfa5c"
 
 [compat]
 DiskArrays = "=0.3.23, ^0.4.5"
+MKL_jll = "2024.2.0"
