Updating container to listen based on a configurable host rather than 127.0.0.1 which does not accept external connections
Signed-off-by: Peter Baker <peter.baker122@csiro.au>

--- a/sample.config.toml
+++ b/sample.config.toml
@@ -2,6 +2,9 @@
 PREPPED_DATA_DIR = '/data'
 
 [server_config]
+# This is the server listening host - recommended to use 0.0.0.0 in deployed
+# environments, but 127.0.0.1 might be more suitable for local environments
+HOST = '0.0.0.0'
 TIFF_CACHE_DIR = '<some location to cache geotiffs>'
 REGIONAL_CACHE_DIR = '<some location to cache regional datasets>'
 DEBUG_MODE = 'false'
